--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "graphql": "^16.8.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
