--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Work in progress......",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --forceExit --coverage"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,8 @@
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
